<?xml version="1.0" encoding="utf-8"?>
<!-- 

 Copyright 2014 Julián Zaragoza 
 
 This file is part of BN: Battery Notification
 
 BN: Battery Notification is free software; you can redistribute it and/or modify it under the terms of the GNU 
 General Public License as published by the Free Software Foundation; either version 2 of the
 License, or (at your option) any later version. This program is distributed in the hope that it will be
 useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
 or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details. 
 You should have received a copy of the GNU General Public License along with this program; if not, 
 write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 
 -->
<resources>

    <string name="app_name">BN: Battery Notification</string>
    <string name="app_prefs">BN Preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="options">Options</string>
    
    <string name="start">Autostart</string>
    <string name="start_desc">Enable/disable autostart on boot</string>
    
    <string name="screen_on">Update on Screen On</string>
    <string name="screen_on_desc">Enable/disable update when screen on</string>
    
    <string name="update">Update time</string>
    <string name="update_desc">Select the update time interval (The less time, the more battery wastes)</string>
</resources>